--- a/q4-table-colorizer/package.json
+++ b/q4-table-colorizer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "q2-tabs",
+  "name": "q4-table-colorizer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "/q4-table-colorizer"
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
