--- a/q4-table-colorizer/package.json
+++ b/q4-table-colorizer/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "/q4-table-colorizer"
+  "homepage": "/q4-table-colorizer",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
